Update and rename github-actions-demo.yml.yml to github-actions-demo.yml

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,7 +17,7 @@ jobs:
     
     steps:
       - run: echo "🚀 Job was triggered by ${{github.eventName}}"
-      - run: echo "🔎 The name of the branch is ${{}github.ref}"
+      - run: echo "🔎 The name of the branch is ${{github.ref}}"
       
       - name: Checkout
         uses: actions/checkout@v3.5.3
