--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,8 +6,6 @@ on:
     paths-ignore: [.github/**]
   pull_request:
     branches: [main]
-  schedule:
-    - cron: '15 6 * * 0'
   workflow_dispatch:
     inputs:
       environment:
@@ -23,12 +21,49 @@ jobs:
     steps:
       - run: echo "🚀 Job was triggered by ${{github.event_name}}"
       - run: echo "🔎 The name of the branch is ${{github.ref}}"
+      - run: echo "ᢀ Var ${{vars.MY_VAR}}"
       
-      - name: Checkout
-        uses: actions/checkout@v3.5.3
-        
-      - name: List all files in the repo
-        run: |
-          echo "Repo has the following files:"
-          tree
-      
+  Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Test
+    steps:
+      - run: echo "🧪 Testing..."
+      - run: echo "ᢀ Var ${{vars.MY_VAR}}"
+
+  Load-Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Load-Test
+    steps:
+      - run: |
+          echo "🧪 Testing..."
+          echo "ᢀ Var ${{vars.MY_VAR}}"
+          sleep 15
+
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Test, Load-Test]
+    environment:
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo "🚀 Step 1..."
+          echo "ᢀ Var ${{vars.MY_VAR}}"
+          sleep 10
+      - run: |
+          echo "🚀 Step 2..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 3..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 4..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 5..."
+          sleep 10
