--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -23,3 +23,10 @@ jobs:
       - name: Set time
         id: time
         run: echo "time=$(date)" >> $GITHUB_OUTPUT
+        
+  Test:
+    runs-on: ubuntu-latest
+    needs: reusable-job
+    environment: Test
+    steps:
+      - run: echo "🧪 Testing..."
