--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -30,3 +30,37 @@ jobs:
     environment: Test
     steps:
       - run: echo "🧪 Testing..."
+      
+  Load-Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: reusable-job
+    environment: Load-Test
+    steps:
+      - run: |
+          echo "🧪 Testing..."
+          echo "ᢀ Var ${{vars.MY_VAR}}"
+          sleep 15
+
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Test, Load-Test]
+    environment:
+      name: Production
+      url: https://writeabout.net
+    steps:
+      - run: |
+          echo "🚀 Step 1..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 2..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 3..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 4..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 5..."
+          sleep 10
