--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -17,6 +17,8 @@ on:
 jobs:
   reusable-job:
     runs-on: ubuntu-latest
+    outputs:
+      current-time: ${{ steps.time.outputs.time }}
     steps:
       - name: Greet someone
         run: echo "Hello ${{ inputs.who-to-greet }}"
